feat: improve auth response caching
